--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">education</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. in Social Psychology at University of Arizona</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Social Psychology, University of Arizona</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Tempe, AZ | 2017 - 2023 (Expected)</div>
 								</div><!--//item-->
 
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">M.A. in Social and Personality Psychology at Yonsei University</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">M.A. Social and Personality Psychology, Yonsei University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Seoul, South Korea | 2015 - 2017</div>
 								</div><!--//item-->
 
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">B.A. in Psychology & Cognitive Science at Yonsei University</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">B.A. Psychology & Cognitive Science, Yonsei University</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Seoul, South Korea | 2011 - 2015</div>
 								</div><!--//item-->
 							</section><!--//education-section-->
@@ -123,31 +123,26 @@
 								</div><!--//item-->
 							</section><!--//project-section-->
 						</div><!--//resume-main-->
+
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
-							<section class="skills-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Skills</h3>
+							<section class="lab-section py-3">
+								<h3 class="text-uppercase resume-section-heading mb-4">Labs</h3>
 								<div class="item">
-									<h4 class="item-title">Technical</h4>
-									<ul class="list-unstyled resume-skills-list">
-										<li class="mb-2">JavaScript/Angular/React/Vue</li>
-										<li class="mb-2">Python/Ruby/PHP<li>
-											<li class="mb-2">Node.js/ASP.NET</li>
-											<li class="mb-2">PostgreSQL/MySQL</li>
-											<li class="mb-2">Object-oriented design</li>
-											<li class="mb-2">Design and implement database structures</li>
-											<li>Lead and deliver complex software systems</li>
+									<h4 class="item-title">Evolution, Ecology, and Social Behavior</h4>
+									<ul class="list-unstyled resume-lab-list">
+										<li class="mb-2">Steven L. Neuberg</li>
 										</ul>
 									</div><!--//item-->
 									<div class="item">
-										<h4 class="item-title">Professional</h4>
-										<ul class="list-unstyled resume-skills-list">
-											<li class="mb-2">Effective communication</li>
-											<li class="mb-2">Team player<li>
-												<li class="mb-2">Strong problem solver</li>
-												<li>Good time management</li>
+										<h4 class="item-title">Evolutionary Social Cognition</h4>
+										<ul class="list-unstyled resume-lab-list">
+											<li class="mb-2">Douglas T. Kenrick</li>
+											<li class="mb-2">Steven L. Neuberg</li>
+											<li class="mb-2">D. Vaughn Becker<li>
 											</ul>
 										</div><!--//item-->
-									</section><!--//skills-section-->
+									</section><!--//lab-section-->
+
 									<section class="education-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
 										<ul class="list-unstyled resume-education-list">
