--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
 											<li class="mb-2">D. Vaughn Becker<li>
 											</ul>
 										</div><!--//item-->
+										<div class="item">
+											<h4 class="item-title">Happiness & Culture</h4>
+											<ul class="list-unstyled resume-lab-list">
+												<li class="mb-2">Eunkook M. Suh</li>
+												</ul>
+											</div><!--//item-->
 									</section><!--//lab-section-->
 
 									<section class="education-section py-3">
