--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">480 410 7425</a></li>
 								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">ahrako@asu.edu</a></li>
-								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en">Google Scholar</a></li>
+								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Tempe, AZ</li>
 							</ul>
 						</div><!--//resume-contact-->
@@ -67,8 +67,8 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">education</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Social Psychology, University of Arizona</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Tempe, AZ | 2017 - 2023 (Expected)</div>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Ph.D. Social Psychology, Arizona State University</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Tempe, AZ | 2017 - 2023</div>
 								</div><!--//item-->
 
 								<div class="item mb-3">
@@ -137,8 +137,8 @@
 										<h4 class="item-title">Evolutionary Social Cognition</h4>
 										<ul class="list-unstyled resume-lab-list">
 											<li class="mb-2">Douglas T. Kenrick</li>
-											<li class="mb-2">Steven L. Neuberg</li>
-											<li class="mb-2">D. Vaughn Becker<li>
+											<li>Steven L. Neuberg</li>
+											<li>D. Vaughn Becker<li>
 											</ul>
 										</div><!--//item-->
 										<div class="item">
