--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
-								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">480 410 7425</a></li>
-								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">ahrako@asu.edu</a></li>
+								<li class="mb-2"><i class="fas fa-phone fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">480 410 7425</a></li>
+								<li class="mb-2"><i class="fas fa-envelope fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">ahrako@asu.edu</a></li>
 								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="https://scholar.google.com/citations?user=P9UfPOIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Tempe, AZ</li>
 							</ul>
@@ -126,7 +126,7 @@
 
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Labs</h3>
+								<h3 class="text-uppercase resume-section-heading mb-4">Lab</h3>
 								<div class="item">
 									<h4 class="item-title">Evolution, Ecology, and Social Behavior</h4>
 									<ul class="list-unstyled resume-lab-list">
