--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									<div class="item">
 										<h4 class="item-title">Evolutionary Social Cognition</h4>
 										<ul class="list-unstyled resume-lab-list">
-											<li class="mb-2">Douglas T. Kenrick</li>
+											<li>Douglas T. Kenrick</li>
 											<li>Steven L. Neuberg</li>
 											<li>D. Vaughn Becker<li>
 											</ul>
